--- a/DNS/SOA Externe/named.conf
+++ b/DNS/SOA Externe/named.conf
@@ -1,3 +1,7 @@
+//Les options sont disponibles dans le fichier named.conf.options
+//Le fichier named.conf fait donc reference vers le fichier d'option
+//Il fait de meme pour le fichier de zone ci-dessous
+
 options {
 	directory "/var/bind";
 
@@ -15,6 +19,8 @@ options {
 	allow-recursion { none; };
 	recursion no;
 };
+
+//zone du SOA publique
 
 zone "l1-1.ephec-ti.be" {
     type master;
