up Résolveur + maj SOA ext

--- a/DNS/Résolveur/named.conf
+++ b/DNS/Résolveur/named.conf
@@ -3,9 +3,16 @@ options {
                                                                                                                                                                                      
         // Specify a list of CIDR masks which should be allowed to issue recursive                                                                                                   
         // queries to the DNS server. Do NOT specify 0.0.0.0/0 here; see above.                                                                                                      
-        allow-recursion {                                                                                                                                                            
-                127.0.0.1/32;                                                                                                                                                        
-                192.168.0.0/24;                                                                                                                                                      
+        
+		// Recursion autorisé pour la zone intranet
+		allow-recursion {                                                                                                                                                            
+				172.16.0.0/24;																																					
+                192.168.0.0/24;
+				192.168.1.0/24;
+				192.168.2.0/24;
+				192.168.3.0/24;
+				192.168.4.0/24;
+				192.168.5.0/24;
         };                                                                                                                                                                           
                                                                                                                                                                                      
         // If you want this resolver to itself resolve via means of another recursive                                                                                                
@@ -22,9 +29,8 @@ options {
         //forward only;                                                                                                                                                              
                                                                                                                                                                                      
         // Configure the IPs to listen on here.                                                                                                                                      
-        listen-on { 127.0.0.1; };                                                                                                                                                    
-        listen-on-v6 { none; };                                                                                                                                                      
-        listen-on port 53 { any; };                                                                                                                                                  
+        listen-on port 3053 { any; };                                                                                                                                                    
+        listen-on-v6 { none; };
                                                                                                                                                                                      
         // If you have problems and are behind a firewall:                                                                                                                           
         //query-source address * port 53;                                                                                                                                            
@@ -38,12 +44,7 @@ options {
                                                                                                                                                                                      
         dnssec-validation no;                                                                                                                                                        
         dnssec-enable no;                                                                                                                                                            
-};
-
-zone "." IN {                                                                                                                                                                        
-        type hint;                                                                                                                                                                   
-        file "named.ca";                                                                                                                                                             
-};                                                                                                                                                                                   
+};                                                                                                                                                                                  
                                                                                                                                                                                      
 zone "localhost" IN {                                                                                                                                                                
         type master;                                                                                                                                                                 
@@ -59,14 +60,14 @@ zone "127.in-addr.arpa" IN {
         notify no;                                                                                                                                                                   
 };                                                                                                                                                                                                                                                                                                                                                                     
                                                                                                                                                                                      
-zone "0.168.192.in-addr.arpa" IN {                                                                                                                                                   
+zone "0.16.172.in-addr.arpa" IN {                                                                                                                                                   
         type forward;                                                                                                                                                                
-        forwarders { 192.168.0.2; };                                                                                                                                                 
+        forwarders { 192.168.0.1; };                                                                                                                                                 
         forward only;                                                                                                                                                                
 };                                                                                                                                                                                   
                                                                                                                                                                                      
-zone "l1-1.ephec-ti.be" IN {                                                                                                                                                         
+zone "intranet.l1-1.ephec-ti.be" {                                                                                                                                                         
         type forward;                                                                                                                                                                
-        forwarders { 192.168.0.10; };                                                                                                                                                
+        forwarders { 172.16.0.1; };                                                                                                                                                
         forward only;                                                                                                                                                                
 };
