--- a/DNS/SOA_Externe/named.conf
+++ b/DNS/SOA_Externe/named.conf
@@ -5,7 +5,7 @@
 options {
 	directory "/var/bind";
 
-	listen-on { any; };
+	listen-on port 53 { any; };
 	listen-on-v6 { none; };
 
 	allow-query { any; };
@@ -16,12 +16,12 @@ options {
 
 	pid-file "/var/run/named/named.pid";
 
+	//N'est pas le résolveur
 	allow-recursion { none; };
 	recursion no;
 };
 
 //zone du SOA publique
-
 zone "l1-1.ephec-ti.be" {
     type master;
     file "/etc/bind/l1-1.ephec-ti.be";
