--- a/DNS externe/named.conf
+++ b/DNS externe/named.conf
@@ -1,28 +1,5 @@
 //Les options sont disponibles dans le fichier named.conf.options
-//Le fichier named.conf fait donc reference vers le fichier d'option
-//Il fait de meme pour le fichier de zone ci-dessous
+include "/etc/bind/named.conf.options";
 
-options {
-	directory "/var/bind";
-
-	listen-on port 53 { any; };
-	listen-on-v6 { none; };
-
-	allow-query { any; };
-
-	allow-transfer {
-		none;
-	};
-
-	pid-file "/var/run/named/named.pid";
-
-	//N'est pas le résolveur
-	allow-recursion { none; };
-	recursion no;
-};
-
-//zone du SOA publique
-zone "l1-1.ephec-ti.be" {
-    type master;
-    file "/etc/bind/l1-1.ephec-ti.be";
-};
+//La zone DNS est spécifié dans le fichier named.conf.local
+include "/etc/bind/named.conf.local";
