--- a/Services internes/SOA Interne/named.conf
+++ b/Services internes/SOA Interne/named.conf
@@ -1,3 +1,19 @@
-include "/etc/bind/named.conf.options";
-include "/etc/bind/named.conf.local";
-include "/etc/bind/named.conf.default-zones";
+options {
+        directory "/var/bind";
+        listen-on { any; };
+        listen-on-v6 { none; };
+
+        allow-query { 
+                172.16.0.0/24; 
+                198.168.0.0/24;
+};
+
+        allow-transfer {
+                none;
+        };
+
+        pid-file "/var/run/named/named.pid";
+
+        allow-recursion { none; };
+        recursion no;
+};
