--- a/Services internes/SOA Interne/named.conf
+++ b/Services internes/SOA Interne/named.conf
@@ -17,3 +17,15 @@ options {
         allow-recursion { none; };
         recursion no;
 };
+
+
+zone "intranet.l1-1.ephec-ti.be" IN {
+        type master;
+        file "/etc/bind/master/intranet.l1-1.ephec-ti.be";
+};
+
+
+zone "0.16.172.in-addr.arpa" IN {
+        type master;
+        file "/etc/bind/master/0.16.172.in-addr.arpa";
+};
