--- a/Services internes/SOA Interne/Dockerfile
+++ b/Services internes/SOA Interne/Dockerfile
@@ -4,10 +4,8 @@ RUN apt update && apt upgrade -y && apt install bind9 bind9utils -y && apt-get u
 
 WORKDIR /etc/bind
 
-COPY ./named.conf /etc/bind/named.conf
-COPY ./named.conf.local /etc/bind/named.conf.local
-COPY ./named.conf.options /etc/bind/named.conf.options
-COPY ./master/intranet.l1-1.ephec-ti.be /etc/bind/master/intranet.l1-1.ephec-ti.be
-COPY ./master/0.16.172.in-addr.arpa /etc/bind/master/0.16.172.in-addr.arpa
+COPY named.conf /etc/bind/named.conf
 
-EXPOSE 53
+COPY zones/intranet.l1-1.ephec-ti.be /etc/bind/zones/intranet.l1-1.ephec-ti.be
+COPY zones/0.16.172.in-addr.arpa /etc/bind/zones/0.16.172.in-addr.arpa
+
