--- a/Services internes/SOA Interne/named.conf
+++ b/Services internes/SOA Interne/named.conf
@@ -24,13 +24,13 @@ options {
 };
 
 
-zone "intranet.l1-1.ephec-ti.be" IN {
+zone "intranet.l1-1.ephec-ti.be" {
         type master;
         file "/etc/bind/master/intranet.l1-1.ephec-ti.be";
 };
 
 
-zone "0.16.172.in-addr.arpa" IN {
+zone "0.16.172.in-addr.arpa" {
         type master;
         file "/etc/bind/master/0.16.172.in-addr.arpa";
 };
