--- a/Services internes/SOA Interne/named.conf
+++ b/Services internes/SOA Interne/named.conf
@@ -30,7 +30,7 @@ zone "intranet.l1-1.ephec-ti.be" {
 };
 
 
-zone "0.16.172.in-addr.arpa" {
+zone "0.16.172.in-addr.arpa" IN {
         type master;
         file "/etc/bind/master/0.16.172.in-addr.arpa";
 };
