--- a/Services internes/SOA Interne/Dockerfile
+++ b/Services internes/SOA Interne/Dockerfile
@@ -1,6 +1,7 @@
 FROM ubuntu:latest
 
 RUN apt update && apt upgrade -y && apt install bind9 bind9utils -y && apt-get update && apt-get install iputils-ping
+RUN apt-get install vim -y
 
 WORKDIR /etc/bind
 
