--- a/DNS externe/named.conf
+++ b/DNS externe/named.conf
@@ -1,5 +1,26 @@
-//Les options sont disponibles dans le fichier named.conf.options
-include "/etc/bind/named.conf.options";
+options {
+	directory "/var/bind";
 
-//La zone DNS est spécifié dans le fichier named.conf.local
-include "/etc/bind/named.conf.local";
+	//Ecoute sur le port 53 en IPv4
+	listen-on port 53 { any; };
+	//Refus d'écoute en IPv6
+	listen-on-v6 { none; };
+
+	allow-query { any; };
+
+	allow-transfer {
+		none;
+	};
+
+	pid-file "/var/run/named/named.pid";
+
+	//N'est pas le résolveur donc refus de la récursion
+	allow-recursion { none; };
+	recursion no;
+};
+
+//zone du SOA publique
+zone "l1-1.ephec-ti.be" {
+    type master;
+    file "/etc/bind/l1-1.ephec-ti.be";
+};
