--- a/Services internes/SOA Interne/Dockerfile
+++ b/Services internes/SOA Interne/Dockerfile
@@ -7,6 +7,4 @@ WORKDIR /etc/bind
 
 COPY named.conf /etc/bind/named.conf
 
-COPY zones/intranet.l1-1.ephec-ti.be /etc/bind/zones/intranet.l1-1.ephec-ti.be
-COPY zones/0.16.172.in-addr.arpa /etc/bind/zones/0.16.172.in-addr.arpa
-
+COPY ./zones/ /etc/bind/zones/
