--- a/Services internes/SOA Interne/Dockerfile
+++ b/Services internes/SOA Interne/Dockerfile
@@ -8,3 +8,5 @@ WORKDIR /etc/bind
 COPY named.conf /etc/bind/named.conf
 
 COPY ./zones/ /etc/bind/zones/
+
+CMD ["named", "-c", "/etc/bind/named.conf", "-g", "-u", "named"]
