--- a/Services internes/Résolveur/Dockerfile
+++ b/Services internes/Résolveur/Dockerfile
@@ -7,4 +7,4 @@ WORKDIR /etc/bind
 
 COPY named.conf /etc/bind/named.conf
 
-CMD ["named", "-c", "/etc/bind/named.conf", "-g", "-u", "named"]
+CMD ["named", "-c", "/etc/bind/named.conf", "-g"]
