--- a/Services internes/SOA Interne/named.conf
+++ b/Services internes/SOA Interne/named.conf
@@ -1,5 +1,5 @@
 options {
-        directory "/var/bind";
+        directory "/var/cache//bind";
         listen-on { any; };
         listen-on-v6 { none; };
 
@@ -26,11 +26,11 @@ options {
 
 zone "intranet.l1-1.ephec-ti.be" {
         type master;
-        file "/etc/bind/master/intranet.l1-1.ephec-ti.be";
+        file "/etc/bind/zones/intranet.l1-1.ephec-ti.be";
 };
 
 
 zone "0.16.172.in-addr.arpa" IN {
         type master;
-        file "/etc/bind/master/0.16.172.in-addr.arpa";
+        file "/etc/bind/zones/0.16.172.in-addr.arpa";
 };
