--- a/Services internes/Résolveur/named.conf
+++ b/Services internes/Résolveur/named.conf
@@ -1,5 +1,5 @@
 options {                                                                                                                                                                            
-        directory "/var/bind";                                                                                                                                                       
+        directory "/var/cache/bind";                                                                                                                                                       
                                                                                                                                                                                      
 	allow-recursion {                                                                                                                                                            
 		172.16.0.0/24;																																					
