--- a/Services internes/SOA Interne/named.conf
+++ b/Services internes/SOA Interne/named.conf
@@ -1,5 +1,5 @@
 options {
-        directory "/var/cache//bind";
+        directory "/var/cache/bind";
         listen-on { any; };
         listen-on-v6 { none; };
 
