--- a/Services internes/Résolveur/named.conf
+++ b/Services internes/Résolveur/named.conf
@@ -19,7 +19,22 @@ options {
                                                                                                                                                                                                                                                                                                              
         allow-transfer { none; };                                                                                                                                                    
                                                                                                                                                           
-};  
+}; 
+
+
+zone "localhost" IN {
+	type master;
+	file "pri/localhost.zone";
+	allow-update { none; };
+	notify no;
+};
+
+zone "127.in-addr.arpa" IN {
+	type master;
+	file "pri/127.zone";
+	allow-update { none; };
+	notify no;
+};
 
 
 zone "intranet.l1-1.ephec-ti.be" {
