--- a/Services internes/Web erp/Dockerfile
+++ b/Services internes/Web erp/Dockerfile
@@ -7,5 +7,5 @@ RUN apt-get install -y curl
 RUN apt-get install vim -y
 
 COPY ./weberp/www/ /var/www/
-COPY ./weberp/config/ /etc/apache2/config/
+COPY ./weberp/sites-available/ /etc/apache2/config/
 COPY ./weberp/apache2.conf /etc/apache2/apache2.conf
