--- a/Web public/sites-available/www.conf
+++ b/Web public/sites-available/www.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-      ServerName www.wl1-1.ephec-ti.be 
+	    ServerName www.l1-1.ephec-ti.be 
 	    ServerAdmin l.carlier.intranet.l1-1.ephec-ti.be
 	    DocumentRoot /var/www/
 
