--- a/Services internes/Web erp/sites-available/intranet.conf
+++ b/Services internes/Web erp/sites-available/intranet.conf
@@ -15,5 +15,8 @@
         Require ip 198.168.5.0/24
         Require ip 198.168.6.0/24
  </Directory>
+ 
+        errorLog ${APACHE_LOG_DIR}/error.log
+	CustomLog ${APACHE_LOG_DIR}/access.log combined
 
 </VirtualHost>
