--- a/Services internes/Web erp/sites-available/intranet.conf
+++ b/Services internes/Web erp/sites-available/intranet.conf
@@ -2,6 +2,13 @@
         ServerName erp.intranet.l1-1.ephec-ti.be
         ServerAdmin l.carlier.intranet.l1-1.ephec-ti.be
         DocumentRoot /var/www/
+	
+	Redirect permanent / https://erp.intranet.l1-1.ephec-ti.be/
+	
+	<Directory />
+        Options FollowSymLinks
+        AllowOverride all 
+    </Directory>
 
  <Directory "/var/www/">
         Options Indexes FollowSymLinks MultiViews
@@ -18,5 +25,9 @@
  
         errorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
+	
+RewriteEngine on
+RewriteCond %{SERVER_NAME} =erp.intranet.l1-1.ephec-ti.be
+RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
 
 </VirtualHost>
