--- a/Services internes/Web erp/sites-available/intranet.conf
+++ b/Services internes/Web erp/sites-available/intranet.conf
@@ -3,7 +3,7 @@
         ServerAdmin l.carlier.intranet.l1-1.ephec-ti.be
         DocumentRoot /var/www/
 	
-	Redirect permanent / https://erp.intranet.l1-1.ephec-ti.be/
+	Redirect permanent / http://erp.intranet.l1-1.ephec-ti.be/
 	
 	<Directory />
         Options FollowSymLinks
