Ajout des commentaires

--- a/Web public/apache2.conf
+++ b/Web public/apache2.conf
@@ -1,3 +1,7 @@
+# Ceci est le fichier de configuration principal d'apache, les fichiers de configuration des hôtes virtuels nécessaires afin d'activer ou de désactiver chacun des sites se trouventr dans le dossier www.
+
+
+
 # This is the main Apache server configuration file.  It contains the
 # configuration directives that give the server its instructions.
 # See http://httpd.apache.org/docs/2.4/ for detailed information about
