--- a/Web public/apache2.conf
+++ b/Web public/apache2.conf
@@ -1,4 +1,5 @@
-# Ceci est le fichier de configuration principal d'apache, les fichiers de configuration des hôtes virtuels nécessaires afin d'activer ou de désactiver chacun des sites se trouventr dans le dossier www.
+# Ceci est le fichier de configuration principal d'apache, les fichiers de configuration des hôtes virtuels nécessaires
+# afin d'activer ou de désactiver chacun des sites se trouvent dans le dossier sites-available.
 
 
 
