--- a/Services internes/SOA Interne/named.conf
+++ b/Services internes/SOA Interne/named.conf
@@ -24,9 +24,9 @@ options {
 };
 
 
-zone "intranet.l1-1.ephec-ti.be" {
+zone "woodytoys.intranet" {
         type master;
-        file "/etc/bind/zones/intranet.l1-1.ephec-ti.be";
+        file "/etc/bind/zones/woodytoys.intranet";
 };
 
 
