--- a/Services internes/Résolveur/named.conf
+++ b/Services internes/Résolveur/named.conf
@@ -37,7 +37,7 @@ zone "127.in-addr.arpa" IN {
 };
 
 
-zone "intranet.l1-1.ephec-ti.be" {
+zone "woodytoys.intranet." {
         type forward;
         forwarders { 172.16.0.5; };
 	forward only;
