--- a/Services internes/SOA Interne/named.conf
+++ b/Services internes/SOA Interne/named.conf
@@ -26,11 +26,11 @@ options {
 
 zone "woodytoys.intranet" {
         type master;
-        file "/etc/bind/zones/woodytoys.intranet";
+        file "/etc/bind/master/woodytoys.intranet";
 };
 
 
 zone "0.16.172.in-addr.arpa" IN {
         type master;
-        file "/etc/bind/zones/0.16.172.in-addr.arpa";
+        file "/etc/bind/master/0.16.172.in-addr.arpa";
 };
